working on the footer of the index page, will soon be done with the page

--- a/index.html
+++ b/index.html
@@ -31,12 +31,27 @@
         </a>
 
         <div class="nav-links">
-          <a class="home" href="./index.html">Home</a>
-          <a href="">Meet Us</a>
-          <a href="">Programmes</a>
-          <a href="">Get Involved</a>
-          <a href="">Sponsor a Child</a>
-          <a href="">Contact</a>
+          <ul>
+            <li>
+              <a class="home" href="./index.html">Home</a>
+            </li>
+            <li>
+              <a href="">Meet Us</a>
+            </li>
+            <li>
+              <a href="">Programmes</a>
+            </li>
+            <li>
+              <a href="">Get Involved</a>
+            </li>
+            <li>
+              <a href="">Sponsor a Child</a>
+            </li>
+
+            <li>
+              <a href="">Contact</a>
+            </li>
+          </ul>
         </div>
       </div>
     </nav>
@@ -84,6 +99,8 @@
               </strong>
               , empowering communities and fostering resilience in the face of
               adversity. <br /><br />
+            </p>
+            <p class="tgt">
               <em
                 >Together, we are building a future where every child learns —
                 no matter their circumstance.</em
@@ -93,6 +110,64 @@
           <div class="little-child"></div>
         </div>
       </div>
+
+      <div class="parent-whyOBM">
+        <div class="whyOBM">
+          <h2>Why Obiloto-Africa Matters</h2>
+
+          <h3>
+            Education is a powerful tool for poverty alleviation. It equips
+            young minds with knowledge, skills, and opportunities, ultimately
+            fostering economic growth and community resilience.
+          </h3>
+
+          <p>
+            Breaking the cycle of poverty – Empowering young minds through
+            education creates sustainable change. Creating future leaders – A
+            well-educated youth population strengthens economies and promotes
+            social progress. Supporting global goals – Obiloto-Africa aligns
+            with SDG 4 (Quality Education) and SDG 1 (No Poverty), ensuring
+            inclusive and equitable learning opportunities.
+          </p>
+
+          <p class="quote">
+            "Education is not preparation for life; education is life itself." –
+            John Dewey
+          </p>
+        </div>
+      </div>
+
+      <div class="vision-pic">
+        <div class="fpic">
+          <div class="vision-texts">
+            <div>
+              <h2>Vision Statement</h2>
+              <p>
+                To provide scholarship opportunities and promote holistic
+                education for young minds, particularly in rural communities
+                across Africa.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="sec-pic">
+          <div class="objectives">
+            <div class="com-texts">
+              <div>
+                <h2>Commitment</h2>
+                <p>
+                  Obiloto-Africa is determined to extend the same opportunities
+                  to others, ensuring that young people from disadvantaged
+                  backgrounds can realise their full potential.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
+
+    <footer></footer>
   </body>
 </html>
