I think I am done with the structure of the home page, waiting for feedback from the team

--- a/index.html
+++ b/index.html
@@ -189,7 +189,13 @@
               >
             </p>
           </div>
-          <div class="little-child"></div>
+
+          <img
+            class="little-child"
+            src="./Images/children_pics/children-7527411_1920.jpg"
+            alt=""
+          />
+          <!-- <div class="little-child"></div> -->
         </div>
       </div>
 
