working of dynamically loading nav aside and footer across pages

--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
       href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
       rel="stylesheet"
     />
-
+    <link rel="stylesheet" href="./styles/General/aside.css" />
+    <script src="./loadComponet.js" defer></script>
     <script src="./navScroll.js" defer></script>
   </head>
   <body>
-    <nav>
+    <!-- <nav>
       <div class="nav-wrapper">
         <a href="./index.html" class="obt-logo">
           <img
@@ -136,7 +137,10 @@
           <p>Copyright &copy; Obiloto-Africa, 2025</p>
         </div>
       </aside>
-    </nav>
+    </nav> -->
+
+    <nav id="navbar"></nav>
+    <aside id="asideBar"></aside>
 
     <main>
       <div class="childrenPic">
